@@ -39,15 +39,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.45.1.0</version> <!-- Controlla l'ultima versione stabile su Maven Central -->
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-community-dialects</artifactId>
-            <version>6.3.1.Final</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version> <!-- Aggiornata alla versione più recente -->
         </dependency>
 
         <dependency>
@@ -180,6 +174,39 @@
         </plugins>
     </build>
 
-
+    <!-- PROFILES -->
+    <profiles>
+        <!-- Profilo per utilizzare mvnd per i test -->
+        <profile>
+            <id>mvnd-test</id>
+            <activation>
+                <property>
+                    <name>mvnd</name>
+                </property>
+            </activation>
+            <properties>
+                <maven.test.skip>false</maven.test.skip>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version>
+                        <configuration>
+                            <argLine>
+                                --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                                --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                                --enable-preview
+                            </argLine>
+                            <parallel>methods</parallel>
+                            <threadCount>4</threadCount>
+                            <useUnlimitedThreads>false</useUnlimitedThreads>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
